# AppParsing

AppParsing/: CMakeLists.txt  database.cpp  database.h  database.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
AppParsing 0.2.5/: CMakeLists.txt  database.cpp  database.h  main.cpp
build-AppParsing/: AppParsing  AppParsing.cbp  CMakeCache.txt  CMakeCache.txt.prev  Makefile  br.html  cmake_install.cmake  index.html
build-AppParsing-0.2.5/: AppParsing  AppParsing.cbp  CMakeCache.txt  CMakeCache.txt.prev  Databases.db  br.html  index.html
build-AppParsing-0.2.5/AppParsing_autogen/: moc_predefs.h  mocs_compilation.cpp
build-AppParsing-0.2.5/AppParsing_autogen/EWIEGA46WW/: moc_database.cpp.d
build-AppParsing/AppParsing_autogen/: moc_predefs.h
build-AppParsing/AppParsing_autogen/EWIEGA46WW/: moc_database.cpp  moc_mainwindow.cpp.d
build-AppParsing/AppParsing_autogen/include/: ui_database.h
build-AppParsing/AppParsong_autogen/EWIEGA46WW/: moc_database.cpp  moc_database.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-AppParsing/AppParsong_autogen/include/: ui_database.h  ui_mainwindow.h
